# gifocrextractor

./: .gitignore  app.py  create_test_image.py  main.py  pyproject.toml  replit.nix  test_abc_ocr.py  test_ocr.py  update_script.sh
static/css/: custom.css
static/js/: improved_error_handling.js  main.js
templates/: base.html  index.html
utils/: diagnostics.py  export_util.py  image_processor.py  ocr_engine.py
