[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "repl_nix_workspace" }] # Update with your package/folder name

[tool.poetry.dependencies]
python = "^3.11"
email-validator = ">=2.2.0"
flask = ">=3.1.0"
flask-sqlalchemy = ">=3.1.1"
gunicorn = ">=23.0.0"
numpy = ">=2.2.4"
openai = ">=1.70.0"
openpyxl = ">=3.1.5"
pandas = ">=2.2.3"
pillow = ">=11.1.0"
psycopg2-binary = ">=2.9.10"
pytesseract = ">=0.3.13"
scipy = ">=1.15.2"
werkzeug = ">=3.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
